[package]
name = "ethereum-pyspec-db"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
arrayvec = "0.7.2"
bytes = "1.1.0"
ethereum-types = "0.12.1"
libmdbx = "0.1.5"
once_cell = "1.9.0"
rlp = "0.5.1"
sha3 = "0.10.0"
smallvec = { version = "1.7.0", features = ["const_new"] }

[dev-dependencies]
ethereum-trie = "0.5.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
tempfile = "3.2.0"
